js/js.translator/testData/incremental/invalidation/toplevelPropertiesWithCrossModuleInliner/lib2/l2.21.kt
fun testToplevelProperties(): Int {
    return globalValWrapper().toInt() +
            inlineGlobalValWrapper().toInt() +
            globalVarWrapper().toInt() +
            inlineGlobalVarWrapper().toInt() + 6
}
